Bug fixed
- Fixed bug that would overlap the chat view title with the messages
and display the scroll bar below the new message form

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -41,9 +41,8 @@ a, a:hover, a:active, a:focus           { outline: 0; text-decoration: none; }
 ***********************/
 #main-container                         { padding: 0; }
 .content-body h5                        { color: #999; padding: 0 20px; position: fixed; top: 60px; }
-.messages-list                          { height: 100%; padding: 60px 20px 0; overflow-y: auto; }
+.messages-list                          { width: 100%; padding: 0 20px 10px; overflow-y: auto; position: absolute; top: 50px; bottom: 65px; }
 .message-container                      { overflow: hidden; }
-.message-container:last-child           { margin-bottom: 80px; }
 .message                                { width: 400px; margin-bottom: 10px; overflow: hidden; }
 .message .user-avatar                   { width: 40px; height: 40px; float: left; }
 .message .content                       { width: auto; max-width: 340px; margin: 7px 0 0 20px; padding: 5px 10px; float: left; background-image: -moz-linear-gradient( top, #fff, #f2f2f2 ); background-image: -webkit-gradient( linear, left top, left bottom, #fff, #f2f2f2 ); background-image: -webkit-linear-gradient( top, #fff,#f2f2f2 ); background-image: linear-gradient( top, #fff,#f2f2f2 ); border: solid 1px rgba(0,0,0,0.18); border-radius: 5px; font-size: 10px; color: #666; text-shadow: 0 1px 1px rgba(255,255,255,0.3); }
